added home screen

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -1,1 +1,7 @@
-{}
+{
+    "choose_language": "Choose Language",
+    "search": "search",
+    "product_type": "Product Type",
+    "electronic_device": "Electronic Devices",
+    "camera_device": "Cameara Devices"
+}
