--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -1,1 +1,7 @@
-{}
+{
+    "choose_language": "ជ្រើសរើសភាសា",
+    "search": "ស្វែងរក",
+    "product_type": "ប្រភេទផលិតផល",
+    "electronic_device": "គ្រឿងអេឡិចត្រូនិច",
+    "camera_device": "កាមេរាសុវត្ថិភាព"
+}
