added http client dio

--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -3,5 +3,6 @@
     "search": "ស្វែងរក",
     "product_type": "ប្រភេទផលិតផល",
     "electronic_device": "គ្រឿងអេឡិចត្រូនិច",
-    "camera_device": "កាមេរាសុវត្ថិភាព"
+    "camera_device": "កាមេរាសុវត្ថិភាព",
+    "all_products": "ផលិតផលទាំងអស់"
 }
