--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -3,5 +3,6 @@
     "search": "search",
     "product_type": "Product Type",
     "electronic_device": "Electronic Devices",
-    "camera_device": "Cameara Devices"
+    "camera_device": "Cameara Devices",
+    "all_products": "All Products"
 }
