--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -6,5 +6,10 @@
     "camera_device": "កាមេរាសុវត្ថិភាព",
     "all_products": "ផលិតផលទាំងអស់",
     "min_qty": "ចំនួនលក់តិចបំផុត",
-    "no_data": "រកមិនឃើញទិន្នន័យ"
+    "no_data": "រកមិនឃើញទិន្នន័យ",
+    "warranty": "ធានា",
+    "color": "ពណ៌",
+    "detail": "ពណ៌មានលម្អិត",
+    "discount": "បញ្ចុះតម្លៃ",
+    "to_cart": "ដាក់ក្នុងកន្ត្រក"
 }
