--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -11,5 +11,8 @@
     "color": "ពណ៌",
     "detail": "ពណ៌មានលម្អិត",
     "discount": "បញ្ចុះតម្លៃ",
-    "to_cart": "ដាក់ក្នុងកន្ត្រក"
+    "to_cart": "ដាក់ក្នុងកន្ត្រក",
+    "order_as_package": "ដាក់កាមេរ៉ាសុវត្ថិភាពជាកញ្ចប់",
+    "minimum_one": "លក់ទិចបំផុត 1",
+    "minimum_greater_1": "លក់ទិចបំផុតលើសពី 1"
 }
