--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -18,5 +18,16 @@
     "choose_color": "Choose Color",
     "total_price": "Total Price",
     "choose_qty": "Choose Quantity",
-    "buy_now": "Buy Now"
+    "buy_now": "Buy Now",
+    "please_log_in": "Please Login",
+    "to_login_screen": "To Login Screen",
+    "phone_number": "Phone Number",
+    "password": "Password",
+    "login": "Login",
+    "user_name": "User Name",
+    "create_account": "Create Account",
+    "create": "Create",
+    "dont_have_account_yet": "Do you have an account ?",
+    "click_here": "Click here",
+    "input_all_fields": "Pleas input all fields"
 }
