--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -32,5 +32,8 @@
     "input_all_fields": "សូមបំពេញពត៌មានទាំងអស់",
     "is_buying": "ផលិតផលកំពុងដាក់ទិញ",
     "done_buying": "ផលិតផលបានទិញរួចរាល់",
-    "logout": "ចាកចេញ"
+    "logout": "ចាកចេញ",
+    "wrong_username": "លេខទូរស័ព្ទ និងពាក្យសម្ងាត់មិនត្រឹមត្រូវ",
+    "login_failt": "មានបញ្ហាក្នុងពេលចូលប្រព័ន្ធ",
+    "login_success": "ចូលប្រព័ន្ធបានជោគជ័យ"
 }
