--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -35,5 +35,10 @@
     "logout": "ចាកចេញ",
     "wrong_username": "លេខទូរស័ព្ទ និងពាក្យសម្ងាត់មិនត្រឹមត្រូវ",
     "login_failt": "មានបញ្ហាក្នុងពេលចូលប្រព័ន្ធ",
-    "login_success": "ចូលប្រព័ន្ធបានជោគជ័យ"
+    "login_success": "ចូលប្រព័ន្ធបានជោគជ័យ",
+    "add_to_cart_success": "ដាក់ចូលកន្ត្រកបានជោគជ័យ",
+    "add_to_cart_failt": "ដាក់ចូលកន្ត្រក់បរាជ័យ",
+    "plz_choose_color": "សូមជ្រើសរើសពណ៌",
+    "continou_buying": "ទិញបន្តរ",
+    "go_to_cart": "ទៅកាន់កន្ត្រក"
 }
