--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -40,5 +40,8 @@
     "add_to_cart_failt": "ដាក់ចូលកន្ត្រក់បរាជ័យ",
     "plz_choose_color": "សូមជ្រើសរើសពណ៌",
     "continou_buying": "ទិញបន្តរ",
-    "go_to_cart": "ទៅកាន់កន្ត្រក"
+    "go_to_cart": "ទៅកាន់កន្ត្រក",
+    "your_cart": "កន្ត្រកទំនិញរបស់អ្នកមានទំនិញ",
+    "cart_total": "កន្ត្រកសរុប",
+    "charge": "គិតលុយ"
 }
