--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -43,5 +43,9 @@
     "go_to_cart": "ទៅកាន់កន្ត្រក",
     "your_cart": "កន្ត្រកទំនិញរបស់អ្នកមានទំនិញ",
     "cart_total": "កន្ត្រកសរុប",
-    "charge": "គិតលុយ"
+    "charge": "គិតលុយ",
+    "do_you_want_to_delete_cart": "តើអ្នកពិតជាចង់ដកផលិលផលនេះចេញពីកន្រ្តកមែនទេ?",
+    "ok": "មែន",
+    "cancel": "បោះបង់",
+    "error_remove_cart": "មានបញ្ហាដកផលិលផលចេញពីកន្ត្រក"
 }
