added pickup order

--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -47,5 +47,7 @@
     "do_you_want_to_delete_cart": "តើអ្នកពិតជាចង់ដកផលិលផលនេះចេញពីកន្រ្តកមែនទេ?",
     "ok": "មែន",
     "cancel": "បោះបង់",
-    "error_remove_cart": "មានបញ្ហាដកផលិលផលចេញពីកន្ត្រក"
+    "error_remove_cart": "មានបញ្ហាដកផលិលផលចេញពីកន្ត្រក",
+    "pick_up": "ទៅយកនៅហាង",
+    "delivery": "ដឹកជញ្ជូន"
 }
