--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -47,5 +47,7 @@
     "do_you_want_to_delete_cart": "Do you want to remove this product fom cart?",
     "ok": "ok",
     "cancel": "cancel",
-    "error_remove_cart": "Error remove from cart"
+    "error_remove_cart": "Error remove from cart",
+    "pick_up": "Pick up",
+    "delivery": "Delivery"
 }
