--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -49,5 +49,11 @@
     "cancel": "បោះបង់",
     "error_remove_cart": "មានបញ្ហាដកផលិលផលចេញពីកន្ត្រក",
     "pick_up": "ទៅយកនៅហាង",
-    "delivery": "ដឹកជញ្ជូន"
+    "delivery": "ដឹកជញ្ជូន",
+    "order_success": "ទិញទំនិញបានជោគជ័យ",
+    "qty": "ចំនួន",
+    "buying": "កំពុងដាក់ទិញ",
+    "confirm": "ហាងបានទទួលការទិញ",
+    "deliverying": "កំពុងដឹកជញ្ជូន",
+    "done": "រួចរាល់"
 }
