--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -55,5 +55,7 @@
     "buying": "កំពុងដាក់ទិញ",
     "confirm": "ហាងបានទទួលការទិញ",
     "deliverying": "កំពុងដឹកជញ្ជូន",
-    "done": "រួចរាល់"
+    "done": "រួចរាល់",
+    "current_locatoin": "ទីកន្លែកបច្ចុប្បន្ន",
+    "map": "ផែនទី"
 }
