--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -57,5 +57,6 @@
     "deliverying": "កំពុងដឹកជញ្ជូន",
     "done": "រួចរាល់",
     "current_locatoin": "ទីកន្លែកបច្ចុប្បន្ន",
-    "map": "ផែនទី"
+    "map": "ផែនទី",
+    "confirm_location_question": "តើអ្នកពិតជាចង់ឲ្យយើងដឹកទំនិញទៅកាន់ទីតាំងនេះមែនទេ?"
 }
