--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -58,5 +58,9 @@
     "done": "រួចរាល់",
     "current_locatoin": "ទីកន្លែកបច្ចុប្បន្ន",
     "map": "ផែនទី",
-    "confirm_location_question": "តើអ្នកពិតជាចង់ឲ្យយើងដឹកទំនិញទៅកាន់ទីតាំងនេះមែនទេ?"
+    "confirm_location_question": "តើអ្នកពិតជាចង់ឲ្យយើងដឹកទំនិញទៅកាន់ទីតាំងនេះមែនទេ?",
+    "plz_pick_camera": "សូមជ្រើសរើសយកកាមេរ៉ា",
+    "see_detail": " មើលលម្អិត",
+    "order_error": "មានបញ្ហាក្នុងពេលបញ្ជាទិញ",
+    "package_order": "កម្មង់ជាកញ្ចប់"
 }
