--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -62,5 +62,6 @@
     "plz_pick_camera": "សូមជ្រើសរើសយកកាមេរ៉ា",
     "see_detail": " មើលលម្អិត",
     "order_error": "មានបញ្ហាក្នុងពេលបញ្ជាទិញ",
-    "package_order": "កម្មង់ជាកញ្ចប់"
+    "package_order": "កម្មង់ជាកញ្ចប់",
+    "plz_login": "សូមធ្វើការចូលប្រព័ន្ធជាមុន"
 }
