--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -77,5 +77,7 @@
     "phone_already_admin": "Phone Number Is Already Admin",
     "success_delete_role": "Disqualification Successfully",
     "unsuccess_delete_role": "Error Disqualification",
-    "can_not_delete_your_self": "Can Not Disqualification Yourself"
+    "can_not_delete_your_self": "Can Not Disqualification Yourself",
+    "change_status_success": "Change Status Successfully",
+    "change_status_error": "Change Status Error"
 }
