--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -77,5 +77,7 @@
     "success_register": "ចុះឈ្មោះបានជោគជ័យ",
     "success_delete_role": "ដកសិទ្ធបានជោគជ័យ",
     "unsuccess_delete_role": "មានបញ្ហាក្នុងពេលដកសិទ្ធ",
-    "can_not_delete_your_self": "មិនអាចដកសិទ្ធខ្លួនឯងបាន"
+    "can_not_delete_your_self": "មិនអាចដកសិទ្ធខ្លួនឯងបាន",
+    "change_status_success": "ផ្លាស់ប្តូរស្ថានភាពទិញទំនិញរួចរាល",
+    "change_status_error": "មានបញ្ហាក្នុងពេលផ្លាសប្តូរស្ថានភាពទិញទំនិញ"
 }
