added add product screen

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -17,6 +17,7 @@
     "minimum_greater_1": "sell minimum more than 1",
     "choose_color": "Choose Color",
     "total_price": "Total Price",
+    "insert_product": "Add new product",
     "choose_qty": "Choose Quantity",
     "buy_now": "Buy Now",
     "please_log_in": "Please Login",
@@ -26,6 +27,17 @@
     "login": "Login",
     "user_name": "User Name",
     "create_account": "Create Account",
+    "product_name": "Product Name",
+    "detail_for": "detail for",
+    "description": "description",
+    "add_product": "Add Product",
+    "has_warranty": "has warranty",
+    "is_camera": "is camera type",
+    "add_more_detail": "add more detail",
+    "go_to_home_screen": "to home screen",
+    "add_more": "add more",
+    "insert_product_success": "insert product successfully",
+    "insert_product_unsuccess": "insert product unsuccessfully",
     "create": "Create",
     "dont_have_account_yet": "Do you have an account ?",
     "click_here": "Click here",
@@ -33,6 +45,12 @@
     "is_buying": "Product in buying process",
     "done_buying": "Product aleady bought",
     "logout": "Logout",
+    "price_after_discount": "Price after discount",
+    "warranty_duration": "Warranty Duration",
+    "add_color": "Add Color",
+    "pick_color": "Pick Color",
+    "plz_insert_all_info": "Please Insert All Information",
+    "price": "Price",
     "wrong_username": "Wrong Username and Password",
     "login_failt": "Login Failt",
     "login_success": "Lgin Successfully",
