--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -56,8 +56,26 @@
     "confirm": "ហាងបានទទួលការទិញ",
     "deliverying": "កំពុងដឹកជញ្ជូន",
     "done": "រួចរាល់",
+    "insert_product": "បន្ថែមផលិតផល",
+    "product_name": "ឈ្មោះផលិតផល",
     "current_locatoin": "ទីកន្លែកបច្ចុប្បន្ន",
     "map": "ផែនទី",
+    "price_after_discount": "តម្លៃក្រោយបញ្ចុះ",
+    "price": "តម្លៃ",
+    "add_color": "បន្ថែមពណ៌",
+    "pick_color": "ជ្រើសរើសពណ៌",
+    "warranty_duration": "រយៈពេលធានា",
+    "is_camera": "ជាប្រភេទកាមេរ៉ា",
+    "add_more_detail": "បន្ថែមពណ៌មានលម្អិត",
+    "go_to_home_screen": "ទៅកាន់ទំព័រដើម",
+    "add_more": "បន្តរបន្ថែមទំនិញ",
+    "has_warranty": "មានធានា",
+    "plz_insert_all_info": "សូមបំពេញពត៌មានទាំងអស់",
+    "insert_product_success": "បន្ថែមផលិតផលបានជោគជ័យ",
+    "insert_product_unsuccess": "មានបញ្ហាក្នុងការបន្ថែមផលិលផល",
+    "detail_for": "លម្អិតអំពី",
+    "description": "ពិពណ៌នា",
+    "add_product": "បន្ថែមផលិតផល",
     "confirm_location_question": "តើអ្នកពិតជាចង់ឲ្យយើងដឹកទំនិញទៅកាន់ទីតាំងនេះមែនទេ?",
     "plz_pick_camera": "សូមជ្រើសរើសយកកាមេរ៉ា",
     "see_detail": " មើលលម្អិត",
