added update delete

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -25,6 +25,8 @@
     "phone_number": "Phone Number",
     "password": "Password",
     "login": "Login",
+    "edit": "edit",
+    "delete": "delete",
     "user_name": "User Name",
     "create_account": "Create Account",
     "product_name": "Product Name",
@@ -35,6 +37,15 @@
     "is_camera": "is camera type",
     "add_more_detail": "add more detail",
     "go_to_home_screen": "to home screen",
+    "delete_sucessfully": "delete sucessfully",
+    "delete_unsucessfully": "delete unsucessfully",
+    "delete_product_question": "Do you want to delete this product ?",
+    "feacture_for_user_only": "This feacture is for user only",
+    "has": "has",
+    "update-successfully": "Update Successfully",
+    "update-unsuccessfully": "Update Unsuccessfully",
+    "save": "save",
+    "picture(s)": "Picture(s)",
     "add_more": "add more",
     "insert_product_success": "insert product successfully",
     "insert_product_unsuccess": "insert product unsuccessfully",
