--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -49,6 +49,7 @@
     "cancel": "បោះបង់",
     "error_remove_cart": "មានបញ្ហាដកផលិលផលចេញពីកន្ត្រក",
     "pick_up": "ទៅយកនៅហាង",
+    "feacture_for_user_only": "មុខងារនេះសម្រាប់អ្នកប្រើប្រាស់ធម្មតាប៉ុណ្ណោះ",
     "delivery": "ដឹកជញ្ជូន",
     "order_success": "ទិញទំនិញបានជោគជ័យ",
     "qty": "ចំនួន",
@@ -56,6 +57,16 @@
     "confirm": "ហាងបានទទួលការទិញ",
     "deliverying": "កំពុងដឹកជញ្ជូន",
     "done": "រួចរាល់",
+    "edit": "កែប្រែ",
+    "delete": "លុប",
+    "has": "មាន",
+    "picture(s)": "រូបភាព",
+    "save": "រក្សាទុក",
+    "update-successfully": "កែប្រែរួចរាល់",
+    "update-unsuccessfully": "មានបញ្ហាក្នុងការកែប្រែ",
+    "delete_sucessfully": "លុបផលិតផលបានជោគជ័យ",
+    "delete_unsucessfully": "មានបញ្ហាក្នុងការលុបផលិតផល",
+    "delete_product_question": "តើអ្នកពិតជាចង់លុបផលិតផលនេះមែនទេ ?",
     "insert_product": "បន្ថែមផលិតផល",
     "product_name": "ឈ្មោះផលិតផល",
     "current_locatoin": "ទីកន្លែកបច្ចុប្បន្ន",
