added price range search

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -68,9 +68,11 @@
     "add_to_cart_success": "Add To Cart Successfully",
     "add_to_cart_failt": "Add To Cart Unsuccessfully",
     "plz_choose_color": "Please Choose Color",
-    "continou_buying": "Continou Buying",
+    "continou_buying": "Continue Buying",
     "go_to_cart": "Go to cart",
     "your_cart": "Your cart has products",
+    "start.price":"Start Price",
+    "to.price":"To Price",
     "cart_total": "Cart Total",
     "charge": "charge",
     "do_you_want_to_delete_cart": "Do you want to remove this product fom cart?",
