--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -9,12 +9,12 @@
     "no_data": "រកមិនឃើញទិន្នន័យ",
     "warranty": "ធានា",
     "color": "ពណ៌",
-    "detail": "ពណ៌មានលម្អិត",
+    "detail": "ពណ៌មានលម្អិត", 
     "discount": "បញ្ចុះតម្លៃ",
     "to_cart": "ដាក់ក្នុងកន្ត្រក",
     "order_as_package": "ដាក់កាមេរ៉ាសុវត្ថិភាពជាកញ្ចប់",
-    "minimum_one": "លក់ទិចបំផុត 1",
-    "minimum_greater_1": "លក់ទិចបំផុតលើសពី 1",
+    "minimum_one": "លក់តិចបំផុត 1",
+    "minimum_greater_1": "លក់តិចបំផុតលើសពី 1",
     "choose_color": "ជ្រើសរើសពណ៌",
     "total_price": "តម្លៃសរុប",
     "choose_qty": "ជ្រើសរើសចំនួន",
@@ -23,6 +23,8 @@
     "to_login_screen": "ទៅកាន់ស្គ្រីនចូលប្រព័ន្ធ",
     "phone_number": "លេខទូរស័ព្ទ",
     "password": "ពាក្យសម្ងាត់",
+    "start.price":"ចាប់ពីតម្លៃ",
+    "to.price":"ដល់តម្លៃ",
     "login": "ចូល",
     "user_name": "ឈ្មោះអ្នកប្រើប្រាស់",
     "create_account": "បង្កើតគណនី",
