--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -25,6 +25,8 @@
     "password": "ពាក្យសម្ងាត់",
     "start.price":"ចាប់ពីតម្លៃ",
     "to.price":"ដល់តម្លៃ",
+    "report":"របាយការណ៍",
+    "no_report":"មិនមានរបាយការណ៍ត្រូវបានរកឃើញ​ !",
     "login": "ចូល",
     "user_name": "ឈ្មោះអ្នកប្រើប្រាស់",
     "create_account": "បង្កើតគណនី",
