--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -48,6 +48,7 @@
     "your_cart": "កន្ត្រកទំនិញរបស់អ្នកមានទំនិញ",
     "cart_total": "កន្ត្រកសរុប",
     "charge": "គិតលុយ",
+    "camera.type":"ប្រភេទកាម៉េរា",
     "do_you_want_to_delete_cart": "តើអ្នកពិតជាចង់ដកផលិលផលនេះចេញពីកន្រ្តកមែនទេ?",
     "ok": "មែន",
     "cancel": "បោះបង់",
