--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -92,6 +92,7 @@
     "current_locatoin": "Current Location",
     "map": "Map",
     "camera.type":"Camera Type",
+    "add.camera.type":"Add Camera Type",
     "confirm_location_question": "Do you want us to develivery to this location?",
     "plz_pick_camera": "Please pick a camera",
     "see_detail": "see detail",
