--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -49,6 +49,7 @@
     "cart_total": "កន្ត្រកសរុប",
     "charge": "គិតលុយ",
     "camera.type":"ប្រភេទកាម៉េរា",
+    "add.camera.type":"បន្ថែមប្រភេទកាមេរ៉ា",
     "do_you_want_to_delete_cart": "តើអ្នកពិតជាចង់ដកផលិលផលនេះចេញពីកន្រ្តកមែនទេ?",
     "ok": "មែន",
     "cancel": "បោះបង់",
