--- a/assets/i18n/km.json
+++ b/assets/i18n/km.json
@@ -25,6 +25,7 @@
     "password": "ពាក្យសម្ងាត់",
     "start.price":"ចាប់ពីតម្លៃ",
     "to.price":"ដល់តម្លៃ",
+    "total":"តម្លៃសរុប",
     "report":"របាយការណ៍",
     "no_report":"មិនមានរបាយការណ៍ត្រូវបានរកឃើញ​ !",
     "login": "ចូល",
@@ -114,5 +115,6 @@
     "unsuccess_delete_role": "មានបញ្ហាក្នុងពេលដកសិទ្ធ",
     "can_not_delete_your_self": "មិនអាចដកសិទ្ធខ្លួនឯងបាន",
     "change_status_success": "ផ្លាស់ប្តូរស្ថានភាពទិញទំនិញរួចរាល",
-    "change_status_error": "មានបញ្ហាក្នុងពេលផ្លាសប្តូរស្ថានភាពទិញទំនិញ"
+    "change_status_error": "មានបញ្ហាក្នុងពេលផ្លាសប្តូរស្ថានភាពទិញទំនិញ",
+    "report.summary":"របាយការណ៍សង្ខេប"
 }
