--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -106,6 +106,7 @@
     "set_to_admin": "set to admin",
     "disqualification": "Disqualification",
     "set_to_super_admin": "set to super admin",
+    "total":"Total",
     "success_added_role": "Added Role Successfully",
     "phone_not_in_system": "Phone Number Is Not In The System",
     "unsuccess_added_role": "Error Added Role",
@@ -114,5 +115,6 @@
     "unsuccess_delete_role": "Error Disqualification",
     "can_not_delete_your_self": "Can Not Disqualification Yourself",
     "change_status_success": "Change Status Successfully",
-    "change_status_error": "Change Status Error"
+    "change_status_error": "Change Status Error",
+    "report.summary":"Summary Report"
 }
